# nexusforest-mcp

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  bytecode_cleanup  clean-docker.sh  docker-compose.yml  docker-entrypoint-pipeline.sh  docker-entrypoint-test.sh  pyproject.toml  pytest.ini  rebuild-data.sh  start-system.sh  stop-system.sh
.claude/: settings.local.json
config/metadata/: runtime.json  semantic.json
docker/: Dockerfile.mcp  Dockerfile.pipeline  Dockerfile.test
docs/: API.md  ARCHITECTURE.md
src/nexus/: __init__.py  init.py  main.py
src/nexus/config/: settings.py
src/nexus/data/database/: exporter.py  query_executor.py  schema.py  views.py
src/nexus/data/metadata/: metadata_manager.py
src/nexus/data/pipeline/: cleaners.py  loaders.py  pipeline_manager.py  transformers.py  utils.py  validators.py
src/nexus/mcp/: mcp_stdio_server.py  models.py
tests/: conftest.py  test_queries.csv  test_setup.py
tests/fixtures/: test_database.py
tests/integration/: test_database.py
tests/unit/data/: test_loaders.py  test_transformers.py  test_validators.py
tests/unit/mcp/: test_mcp_simple.py
